--- a/index.html
+++ b/index.html
@@ -1,122 +1,252 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <title>Ser Integral</title> 
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-        <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <img src="imagens/logo.png" width="150" height="100" />
-                    <!-- <a class="navbar-brand" href="#">Ser Integral</a> -->
-                </div>
-                <ul class="nav navbar-nav">
-                  <li><a href="index.html">Ser Integral</a></li>
-                  <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="prep-cm.html">Preparatório Colégio Militar</a></li>
-                  <li><a href="prep-if.html">Preparatório IFMS</a></li>
-                  <li><a href="espiritismo.html">Espiritismo</a></li>
+<html lang="pt-br">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ser Integral</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
+</head>
+<body>
+    <!-- Header -->
+    <!-- <header><i class="fab fa-youtube"></i></header> -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+            <!-- <a class="navbar-brand" href="#"><img src="./img/logo.png" width="80" height="100"></a> -->
+            <a class="navbar-brand" href="#"><i class="fas fa-book-open"></i> Instituto Ser Integral</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <!-- <li class="nav-item"><a class="nav-link">Instituto Ser Integral</a></li> -->
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prep-cm.html">Preparatório Colégio Militar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="espiritismo.html">Ensino Religioso</a>
+                    </li>
                 </ul>
             </div>
-            </nav>
+        </div>
+    </nav>
+    <!-- Image Slider -->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slide0" data-slides-to="0" class="active"></li>
+            <li data-target="#slide1" data-slides-to="1"></li>
+            <li data-target="#slide2" data-slides-to="2"></li>
+        </ul>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./img/bk_cmcg2.jpg" class="img-fluid" alt=" Imagem: CMCG/Google">
+                <div class="carousel-caption">
+                    <h1 class="display-2"></h1>
+                    <h3>Preparatório Colégio Militar</h3>
+                    <!-- <button type="button" class="btn btn-outline-light btn-lg">CLIQUE AQUI</button>
+                                    <button class="btn btn-primary btn-lg">Ver Vídeos</button> -->
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./img/bk_ifms.png" class="img-fluid" alt="Preparatório IFMS">
+                <div class="carousel-caption">
+                    <h1 class="display-2"></h1>
+                    <h3>Preparatório IFMS</h3>
+                    <!-- <button type="button" class="btn btn-outline-light btn-lg">CLIQUE AQUI</button>
+                                    <button class="btn btn-primary btn-lg">Ver Vídeos</button> -->
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./img/bk_cosmos.jpg" class="img-fluid" alt="Ensino Religioso">
+                <div class="carousel-caption">
+                    <h1 class="display-2"></h1>
+                    <h3>Vídeos Fraternos</h3>
+                    <!-- <button type="button" class="btn btn-outline-light btn-lg">CLIQUE AQUI</button>
+                                    <button class="btn btn-primary btn-lg">Ver Vídeos</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Jumbotron -->
+    <!-- <div class="container-fluid">
+                    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+                        <p class="lead">O Instituto Ser Integral é uma associação civil sem fins lucrativos, 
+                            que tem por objetivo a promoção social e educacional da população de baixa renda, 
+                            mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais 
+                            de melhor qualidade</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+                        <a href="quem-somos.html"><button type="button" class="btn btn-out-line-secondary btn-lg">Quem Somos</button></a>
+                    </div>
+                </div> -->
+    <!-- Welcome Section -->
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+                <h1 class="display-4">Aprovada no Colégio Militar</h1>
+            </div>
+            <hr>
+            <div class="col-12">
+                <p class="lead">Parabéns Eduarda! Estamos muito felizes com a sua aprovação no Colégio Militar de Campo
+                    Grande!</p>
+            </div>
+        </div>
+    </div>
+    <!-- Three Column Section -->
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <a href="prep-cm.html">
+                    <!-- <i class="fas fa-code"></i> -->
+                    <i class="fas fa-book"></i>
+                    <h3>CMCG</h3>
+                    <p>Clique aqui para acessar as aulas do Curso Preparatório para o Colégio Militar.</p>
+                </a>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <a href="prep-if.html">
+                    <!-- <i class="fas fa-bold"></i> -->
+                    <i class="fas fa-university"></i>
+                    <h3>IFMS</h3>
+                    <p>Clique aqui para acessar as aulas do Curso Preparatório para o IFMS.</p>
+                </a>
+            </div>
+            <div class="col-sm-12 col-sm-6 col-md-4">
+                <a href="espiritismo.html">
+                    <!-- <i class="fab fa-css3" aria-hidden="true"></i> -->
+                    <i class="fas fa-bible"></i>
+                    <h3>Ensino Religioso</h3>
+                    <p>Clique aqui para assistir aos videos com mensagens fraternas.</p>
+                </a>
+            </div>
+        </div>
+        <hr class="my-4">
+    </div>
+    <!-- Two Column Section -->
+    <!-- Comentado para revisão posterior -->
+    <!-- <div class="container-fluid padding">
+                    <div class="row padding">
+                        <div class="col-md-12 col-lg-6">
+                            <h2>Matemática</h2>
+                            <p>Aprenda Matemática de um jeito fácil</p>
+                            <p>Prepare-se para o concurso do CMCG</p>
+                            <p>Estude com o Professor João Carlos</p>
+                        </div>  
+                        <div class="col-lg-6">
+                            <iframe width="250" height="160" src="https://www.youtube.com/embed/6zc-dNRLk5U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div> -->
+    <!-- Fixed Background -->
+    <!-- Meet the Team -->
+    <!-- Cards -->
+    <!-- Two Column Section -->
+    <!-- Connect -->
+    <div class="container">
+        <h4>Vídeos em destaque</h4>
         <div class="grid-container">
-            <div class="grid-item"><!-- GRADE 1 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/6zc-dNRLk5U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 1 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/6zc-dNRLk5U" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Preparatório Colégio Militar</h6>
                 <h6>Questão Resolvida</h6>
                 <p>Matemática | CMB 2018/2019 | Q1</p>
             </div><!--  width="250" height="160" -->
-             <div class="grid-item"><!-- GRADE 2 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/w4WxH5rU1uM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 2 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/w4WxH5rU1uM" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Preparatório IFMS</h6>
                 <h6>Moçambique | 26/11/2020 às 7h</h6>
                 <p>Matemática | Prof.º Paulo</p>
             </div>
-            <div class="grid-item"><!-- GRADE 3 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/nPtRR9Slzow" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 3 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/nPtRR9Slzow" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Agradecimento</h6>
                 <h6>Fernanda | EGO - 7º Ano</h6>
                 <p>26/11/2020 às 10h</p>
             </div>
-            <div class="grid-item"><!-- GRADE 4 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/f6-jGupzNjw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 4 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/f6-jGupzNjw" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Preparatório Colégio Militar</h6>
                 <h6>Questão Resolvida</h6>
                 <p>Matemática | CMBEL 2018/2019 | Q1</p>
             </div>
-            <div class="grid-item"><!-- GRADE 5 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/Ven0P1DE348" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 5 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/Ven0P1DE348" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Preparatório Colégio Militar</h6>
                 <h6>Questão Resolvida</h6>
                 <p>Matemática | CMCG 2019/2020 | Q1</p>
             </div>
-            <div class="grid-item"><!-- GRADE 6 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/QM_7m7xws4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 6 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/QM_7m7xws4Y" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Agradecimento</h6>
                 <h6>Leia (Mãe da Ana Beatriz) | EGO - 6º Ano</h6>
                 <p>2 de dezembro de 2020</p>
             </div>
-            <div class="grid-item"><!-- GRADE 7 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/tPZ7XA9hdfA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 7 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/tPZ7XA9hdfA" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Preparatório Colégio Militar</h6>
                 <h6>Questão Resolvida</h6>
                 <p>Matemática | CMF 2018/2019 | Q1</p>
             </div>
-            <div class="grid-item"><!-- GRADE 8 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/GYKhriPfeFQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="grid-item">
+                <!-- GRADE 8 -->
+                <iframe width="250" height="160" src="https://www.youtube.com/embed/GYKhriPfeFQ" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <h6>Preparatório IFMS</h6>
                 <h6>Aula de Português | IF</h6>
                 <p>26/11/2020 às 10h</p>
             </div>
         </div>
-        <div>
-        </div>
         <hdr></hdr>
-            <div>
-                <footer>
-                    <div>
-                        <ul>
-                            <li><a href="quem-somos.html">Quem Somos</a></li>
-                            <li><a href="#">Seja um Patrocinador</a></li>
-                            <li><a href="#">Fale Conosco</a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="#">Ajuda</a></li>
-                            <li><a href="#">Mapa do Site</a></li>
-                            <li><a href="#">Filantropia e Fraternidade Espírita</a></li>
-                        </ul>
-                    </div>
-                </footer>
+        <!-- Footer -->
+        <footer>
+            <div class="container-fluid padding">
+                <div class="row text-left">
+                    <ul class="footer">
+                        <li><a href="quem-somos.html">Quem Somos</a></li>
+                        <li><a href="mapa-do-site.html">Mapa do Site</a></li>
+                        <li><a href="fale-conosco.html">Fale Conosco</a></li>
+                    </ul>
+                    <ul class="footer">
+                        <li><a href="ajuda.html">Ajuda</a></li>
+                        <li><a href="filantropia.html">Filantropia e Fraternidade Espírita</a></li>
+                        <li><a href="patrocinadores.html">Seja um Patrocinador</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </body>
+        </footer>
+    </div>
+</body>
 </html>
-<!--
-
-    [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-    [::::::::::::::      ::::::::::::::]
-    [::::::::::::::      ::::::::::::::]
-    [::::::[[[[[[[:      :]]]]]]]::::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[     CODE THE WEB     ]:::::]
-    [:::::[  http://brackets.io  ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [::::::[[[[[[[:      :]]]]]]]::::::]
-    [::::::::::::::      ::::::::::::::]
-    [::::::::::::::      ::::::::::::::]
-    [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-
--->
