--- a/prep-cm.html
+++ b/prep-cm.html
@@ -1,58 +1,68 @@
-            <!DOCTYPE html>
-            <html>
-
-                <head>
-                    <meta charset="utf-8">
-                    <meta name="viewport" content="width=device-width, initial-scale=1">
-                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-                    <title>Ser Integral</title>
-                    <link rel="stylesheet" href="main.css">
-                </head>
-                <body>
-                    <div class="container">
-                    <nav class="navbar navbar-default">
+                <!DOCTYPE html>
+                <html>
+                    <head>
+                        <meta charset="utf-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1">
+                        <title>Ser Integral</title> 
+                        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+                        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
+                        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+                        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
+                        <link rel="stylesheet" href="./css/main.css">
+                    </head>
+                    <body>
+                    <!-- Navigation -->
+                    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
                         <div class="container-fluid">
-                            <div class="navbar-header">
-                                <img src="imagens/logo.png" width="150" height="100" />
-                                <!-- <a class="navbar-brand" href="#">Ser Integral</a> -->
+                            <!-- <a class="navbar-brand" href="#"><img src="./img/logo.png" width="80" height="100"></a> -->
+                            <a class="navbar-brand" href="#"><i class="fas fa-book-open"></i>  Instituto Ser Integral</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarResponsive">
+                                <ul class="navbar-nav ml-auto">
+                                    <!-- <li class="nav-item"><a class="nav-link">Instituto Ser Integral</a></li> -->
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="prep-cm.html">Preparatório Colégio Militar</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="espiritismo.html">Ensino Religioso</a>
+                                    </li>
+                                </ul>
                             </div>
-                            <ul class="nav navbar-nav">
-                              <li><a href="index.html">Ser Integral</a></li>
-                              <li class="active"><a href="index.html">Home</a></li>
-                              <li><a href="prep-cm.html">Preparatório Colégio Militar</a></li>
-                              <li><a href="prep-if.html">Preparatório IFMS</a></li>
-                              <li><a href="espiritismo.html">Espiritismo</a></li>
-                            </ul>
                         </div>
-                        </nav>
-                    <div class="grid-container">
-                        <h1>EM DESENVOLVIMENTO</h1>
-                    </div>
+                    </nav>
+                        <div class="grid-container">
+                            <h1>EM DESENVOLVIMENTO</h1>
+                        </div>
+                    </body>
+                </html>
+            <!--
 
-                    </div>
-                </body>
-            </html>
-        <!--
+                [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
+                [::::::::::::::      ::::::::::::::]
+                [::::::::::::::      ::::::::::::::]
+                [::::::[[[[[[[:      :]]]]]]]::::::]
+                [:::::[                      ]:::::]
+                [:::::[                      ]:::::]
+                [:::::[                      ]:::::]
+                [:::::[                      ]:::::]
+                [:::::[     CODE THE WEB     ]:::::]
+                [:::::[  http://brackets.io  ]:::::]
+                [:::::[                      ]:::::]
+                [:::::[                      ]:::::]
+                [:::::[                      ]:::::]
+                [:::::[                      ]:::::]
+                [::::::[[[[[[[:      :]]]]]]]::::::]
+                [::::::::::::::      ::::::::::::::]
+                [::::::::::::::      ::::::::::::::]
+                [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
 
-            [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-            [::::::::::::::      ::::::::::::::]
-            [::::::::::::::      ::::::::::::::]
-            [::::::[[[[[[[:      :]]]]]]]::::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[     CODE THE WEB     ]:::::]
-            [:::::[  http://brackets.io  ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [::::::[[[[[[[:      :]]]]]]]::::::]
-            [::::::::::::::      ::::::::::::::]
-            [::::::::::::::      ::::::::::::::]
-            [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-
-        -->
+            -->
