--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
             <div class="container-fluid padding">
                 <div class="row text-left">
                     <ul class="footer">
+                        <li><a href="inscricao.html">Inscreva-se</a></li>
                         <li><a href="quem-somos.html">Quem Somos</a></li>
                         <li><a href="mapa-do-site.html">Mapa do Site</a></li>
                         <li><a href="fale-conosco.html">Fale Conosco</a></li>
