Incluída informação sobre o autor da página.

--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
                         <li><a href="ajuda.html">Ajuda</a></li>
                         <li><a href="filantropia.html">Filantropia e Fraternidade Espírita</a></li>
                         <li><a href="patrocinadores.html">Seja um Patrocinador</a></li>
+                        <li><a href="https://www.linkedin.com/in/alanderson-americo/
+                            " target="_blank">Autor: @alanderson_americo</a></li>
                     </ul>
                 </div>
             </div>
