--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ser Integral</title>
+    <title>Instituto Ser Integral</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
@@ -11,31 +12,34 @@
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <!-- Header -->
     <!-- <header><i class="fab fa-youtube"></i></header> -->
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <!-- <a class="navbar-brand" href="#"><img src="./img/logo.png" width="80" height="100"></a> -->
-            <a class="navbar-brand" href="#"><i class="fas fa-book-open"></i> Instituto Ser Integral</a>
+            <!-- <a class="navbar-brand" href="index.html"><img src="./img/logo.png" width="80" height="100"></a> -->
+            <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser
+                Integral</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <!-- <li class="nav-item"><a class="nav-link">Instituto Ser Integral</a></li> -->
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                    <!-- <li class="nav-item"><a class="nav-link">Instituto Instituto Ser Integral</a></li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="prep-cm.html">Preparatório Colégio Militar</a>
+                        <a class="nav-link" href="#">Preparatório Colégio Militar</a>
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
+                            <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="espiritismo.html">Ensino Religioso</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +85,7 @@
     <!-- Jumbotron -->
     <!-- <div class="container-fluid">
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-                        <p class="lead">O Instituto Ser Integral é uma associação civil sem fins lucrativos, 
+                        <p class="lead">O Instituto Instituto Ser Integral é uma associação civil sem fins lucrativos, 
                             que tem por objetivo a promoção social e educacional da população de baixa renda, 
                             mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais 
                             de melhor qualidade</p>
@@ -104,35 +108,35 @@
         </div>
     </div>
     <!-- Three Column Section -->
-    <div class="container-fluid padding">
+    <!-- <div class="container-fluid padding">
         <div class="row text-center padding">
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <a href="prep-cm.html">
-                    <!-- <i class="fas fa-code"></i> -->
-                    <i class="fas fa-book"></i>
+                <a href="prep-cm.html"> -->
+    <!-- <i class="fas fa-code"></i> -->
+    <!--    <i class="fas fa-book"></i>
                     <h3>CMCG</h3>
                     <p>Clique aqui para acessar as aulas do Curso Preparatório para o Colégio Militar.</p>
                 </a>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <a href="prep-if.html">
-                    <!-- <i class="fas fa-bold"></i> -->
-                    <i class="fas fa-university"></i>
+                <a href="prep-if.html"> -->
+    <!-- <i class="fas fa-bold"></i> -->
+    <!-- <i class="fas fa-university"></i>
                     <h3>IFMS</h3>
                     <p>Clique aqui para acessar as aulas do Curso Preparatório para o IFMS.</p>
                 </a>
             </div>
             <div class="col-sm-12 col-sm-6 col-md-4">
-                <a href="espiritismo.html">
-                    <!-- <i class="fab fa-css3" aria-hidden="true"></i> -->
-                    <i class="fas fa-bible"></i>
+                <a href="espiritismo.html"> -->
+    <!-- <i class="fab fa-css3" aria-hidden="true"></i> -->
+    <!-- <i class="fas fa-bible"></i>
                     <h3>Ensino Religioso</h3>
                     <p>Clique aqui para assistir aos videos com mensagens fraternas.</p>
                 </a>
             </div>
         </div>
         <hr class="my-4">
-    </div>
+    </div> -->
     <!-- Two Column Section -->
     <!-- Comentado para revisão posterior -->
     <!-- <div class="container-fluid padding">
@@ -237,19 +241,18 @@
                     <ul class="footer">
                         <li><a href="inscricao.html">Inscreva-se</a></li>
                         <li><a href="quem-somos.html">Quem Somos</a></li>
-                        <li><a href="mapa-do-site.html">Mapa do Site</a></li>
                         <li><a href="fale-conosco.html">Fale Conosco</a></li>
                     </ul>
                     <ul class="footer">
                         <li><a href="ajuda.html">Ajuda</a></li>
-                        <li><a href="filantropia.html">Filantropia e Fraternidade Espírita</a></li>
                         <li><a href="patrocinadores.html">Seja um Patrocinador</a></li>
                         <li><a href="https://www.linkedin.com/in/alanderson-americo/
-                            " target="_blank">Autor: @alanderson_americo</a></li>
+                            " target="_blank">@author: alanderson_americo</a></li>
                     </ul>
                 </div>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
