--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -30,13 +30,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Preparatório Colégio Militar</a>
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
-                            <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
-                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="espiritismo.html">Ensino Religioso</a>
                     </li>
                 </ul>
             </div>
@@ -48,25 +47,3 @@
 </body>
 
 </html>
-<!--
-
-            [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-            [::::::::::::::      ::::::::::::::]
-            [::::::::::::::      ::::::::::::::]
-            [::::::[[[[[[[:      :]]]]]]]::::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[     CODE THE WEB     ]:::::]
-            [:::::[  http://brackets.io  ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [:::::[                      ]:::::]
-            [::::::[[[[[[[:      :]]]]]]]::::::]
-            [::::::::::::::      ::::::::::::::]
-            [::::::::::::::      ::::::::::::::]
-            [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-
-        -->
