--- a/inscricao.html
+++ b/inscricao.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ser Integral</title>
+  <title>Instituto Ser Integral</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
@@ -17,26 +17,28 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#"><img src="./img/logo.png" width="80" height="100"></a> -->
-      <a class="navbar-brand" href="#"><i class="fas fa-book-open"></i> Instituto Ser Integral</a>
+      <!-- <a class="navbar-brand" href="index.html"><img src="./img/logo.png" width="80" height="100"></a> -->
+      <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser Integral</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <!-- <li class="nav-item"><a class="nav-link">Instituto Ser Integral</a></li> -->
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
+          <!-- <li class="nav-item"><a class="nav-link">Instituto Instituto Ser Integral</a></li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="prep-cm.html">Preparatório Colégio Militar</a>
+            <a class="nav-link" href="#">Preparatório Colégio Militar</a>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
+              <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="espiritismo.html">Ensino Religioso</a>
-          </li>
+
         </ul>
       </div>
     </div>
