Consertado o erro da página Turma Iniciante.

--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -30,12 +30,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Preparatório Colégio Militar</a>
-                    </li>
+                        <ul class="navbar-nav ml-auto">
+                          <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
+                          <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
+                        </ul>
+                      </li>
                     <li class="nav-item">
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="espiritismo.html">Ensino Religioso</a>
                     </li>
                 </ul>
             </div>
