--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Instituto Ser Integral</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -42,9 +42,30 @@
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
+  <div class="container">
+    <h3 class="blog">Como melhorar a sua redação</h3>
+    <p class="blocktext">Oi galera! Vocês sabiam que as notas de redação são as mais baixas dentre todas as matérias?
+      Isso ocorre não apenas no nosso Estado, Mato Grosso do Sul, mas em todos os estados do país, pois não temos o
+      hábito da leitura. Devemos aprender e nos acostumarmos a ler desde cedo.</p>
+      <blockquote>&#34;Redação é leitura <br>e treino constante.&#34;</blockquote>
+    <p class="blocktext">Percebemos, ao longo destes anos, trabalhando com redações, qué é muito difícil tirarmos um
+      vício das nossas escritas. Parece com a toalha sobre a cama e o sapato jogado na sala que nossa mãe sempre fala
+      e acabamos por repetir sem querer. Portanto, estamos aqui para dizer a vocês que redação é leitura, desde cedo,
+      e treino constante. Vamos lá, sei que você é capaz!
+    </p>
+    <blockquote>&#34;A leitura aumenta nossa <br>capacidade de interpretação&#34;</blockquote>
+    <p class="blocktext">A maior nota de redação na prova do <abbr title="Colégio Militar de Campo Grande">CMCG</abbr>, 
+      concurso 2020/2021, foi de 8,15, bem menor que as notas de Matemática e Português. Nosso aluno tirou 7 e está 
+      dentro do esperado, contudo podemos melhorar nossa escrita. <mark>Os pais devem incentivar e incutir em seus filhos
+      pequenos o gosto pela leitura desde terna idade</mark> e nós, alunos, devemos sempre ter um livro para lermos. 
+      A leitura aumenta nossa capacidade de interpretação e compreensão para a <u>vida</u> sob todos os aspectos.
+    </p>
+    <p class="blocktext">Quanto aos alunos aprovados e não classificados, permitam-se mais tempo de treino, já que <mark>
+      um ano ou dois de continuidade são décadas vitoriosas no futuro</mark> incluindo as suas redações nos vestibulares.
+    </p>
+    <p class="blocktext">Vamos em frente!</p>
+    <h6 class="signature">Professora Alexandra Galvão</h6>
+    <h6 class="signature">Coordenadora de Língua Portuguesa</h6>
   </div>
 </body>
-
 </html>
