--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Instituto Ser Integral</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,10 +31,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Preparatório Colégio Militar</a>
                         <ul class="navbar-nav ml-auto">
-                          <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
-                          <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
+                            <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
+                            <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
                         </ul>
-                      </li>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
                     </li>
