Atualização: correção ortográfica.

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,7 +11,6 @@
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
   <link rel="stylesheet" href="./css/main.css">
 </head>
-
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
@@ -48,7 +46,7 @@
       Isso ocorre não apenas no nosso Estado, Mato Grosso do Sul, mas em todos os estados do país, pois não temos o
       hábito da leitura. Devemos aprender e nos acostumarmos a ler desde cedo.</p>
       <blockquote>&#34;Redação é leitura <br>e treino constante.&#34;</blockquote>
-    <p class="blocktext">Percebemos, ao longo destes anos, trabalhando com redações, qué é muito difícil tirarmos um
+    <p class="blocktext">Percebemos, ao longo destes anos, trabalhando com redações, que é muito difícil tirarmos um
       vício das nossas escritas. Parece com a toalha sobre a cama e o sapato jogado na sala que nossa mãe sempre fala
       e acabamos por repetir sem querer. Portanto, estamos aqui para dizer a vocês que redação é leitura, desde cedo,
       e treino constante. Vamos lá, sei que você é capaz!
