Criadas as setas de linkagem para o topo da página. Criados estilos da página 'Turma Iniciante'. Suprimido o nome do autor do site. Criado conteúdo para a página 'Turma Iniciante'.

--- a/blog.html
+++ b/blog.html
@@ -65,5 +65,8 @@
     <h6 class="signature">Professora Alexandra Galvão</h6>
     <h6 class="signature">Coordenadora de Língua Portuguesa</h6>
   </div>
+  <div style="position:fixed; bottom:0px; right:30px;">
+    <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
+  </div>
 </body>
 </html>
