--- a/index.html
+++ b/index.html
@@ -247,12 +247,15 @@
                         <li><a href="ajuda.html">Ajuda</a></li>
                         <li><a href="patrocinadores.html">Seja um Patrocinador</a></li>
                         <li><a href="https://www.linkedin.com/in/alanderson-americo/
-                            " target="_blank">@author: alanderson_americo</a></li>
+                            " target="_blank">@author</a></li>
                     </ul>
                 </div>
             </div>
         </footer>
     </div>
+    <div style="position:fixed; bottom:0px; left:30px;">
+        <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
+      </div>
 </body>
 
 </html>
