--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -43,7 +43,30 @@
         </div>
     </nav>
     <div class="grid-container">
-        <h1>EM DESENVOLVIMENTO</h1>
+        <div class="video1">
+            <iframe src="https://www.youtube.com/embed/72bV8E7Xx6o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video2">
+            <iframe src="https://www.youtube.com/embed/TJwa35agwhU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video3">
+            <iframe src="https://www.youtube.com/embed/fvkApQgth78" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video4">
+            <iframe src="https://www.youtube.com/embed/hfwKSNdl2sA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video5">
+            <iframe src="https://www.youtube.com/embed/2xj9kS6XUAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video6">
+            <iframe src="https://www.youtube.com/embed/40hmeODZ6E8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video7">
+            <iframe src="https://www.youtube.com/embed/GiUg4ks_0vM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="video8">
+            <iframe src="https://www.youtube.com/embed/visRggyHP_I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 
