Incluído o link da página do canal África - Ensino Médio.

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +12,7 @@
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
   <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
@@ -36,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">África - Ensino Médio</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -45,21 +50,24 @@
     <p class="blocktext">Oi galera! Vocês sabiam que as notas de redação são as mais baixas dentre todas as matérias?
       Isso ocorre não apenas no nosso Estado, Mato Grosso do Sul, mas em todos os estados do país, pois não temos o
       hábito da leitura. Devemos aprender e nos acostumarmos a ler desde cedo.</p>
-      <blockquote>&#34;Redação é leitura <br>e treino constante.&#34;</blockquote>
+    <blockquote>&#34;Redação é leitura <br>e treino constante.&#34;</blockquote>
     <p class="blocktext">Percebemos, ao longo destes anos, trabalhando com redações, que é muito difícil tirarmos um
       vício das nossas escritas. Parece com a toalha sobre a cama e o sapato jogado na sala que nossa mãe sempre fala
       e acabamos por repetir sem querer. Portanto, estamos aqui para dizer a vocês que redação é leitura, desde cedo,
       e treino constante. Vamos lá, sei que você é capaz!
     </p>
     <blockquote>&#34;A leitura aumenta nossa <br>capacidade de interpretação&#34;</blockquote>
-    <p class="blocktext">A maior nota de redação na prova do <abbr title="Colégio Militar de Campo Grande">CMCG</abbr>, 
-      concurso 2020/2021, foi de 8,15, bem menor que as notas de Matemática e Português. Nosso aluno tirou 7 e está 
-      dentro do esperado, contudo podemos melhorar nossa escrita. <mark>Os pais devem incentivar e incutir em seus filhos
-      pequenos o gosto pela leitura desde terna idade</mark> e nós, alunos, devemos sempre ter um livro para lermos. 
+    <p class="blocktext">A maior nota de redação na prova do <abbr title="Colégio Militar de Campo Grande">CMCG</abbr>,
+      concurso 2020/2021, foi de 8,15, bem menor que as notas de Matemática e Português. Nosso aluno tirou 7 e está
+      dentro do esperado, contudo podemos melhorar nossa escrita. <mark>Os pais devem incentivar e incutir em seus
+        filhos
+        pequenos o gosto pela leitura desde terna idade</mark> e nós, alunos, devemos sempre ter um livro para lermos.
       A leitura aumenta nossa capacidade de interpretação e compreensão para a <u>vida</u> sob todos os aspectos.
     </p>
-    <p class="blocktext">Quanto aos alunos aprovados e não classificados, permitam-se mais tempo de treino, já que <mark>
-      um ano ou dois de continuidade são décadas vitoriosas no futuro</mark> incluindo as suas redações nos vestibulares.
+    <p class="blocktext">Quanto aos alunos aprovados e não classificados, permitam-se mais tempo de treino, já que
+      <mark>
+        um ano ou dois de continuidade são décadas vitoriosas no futuro</mark> incluindo as suas redações nos
+      vestibulares.
     </p>
     <p class="blocktext">Vamos em frente!</p>
     <h6 class="signature">Professora Alexandra Galvão</h6>
@@ -69,4 +77,5 @@
     <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
   </div>
 </body>
+
 </html>
