--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">África - Ensino Médio</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -255,7 +258,7 @@
     </div>
     <div style="position:fixed; bottom:0px; left:30px;">
         <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-up"></i></a>
-      </div>
+    </div>
 </body>
 
 </html>
