Adicionados vídeos responsivos na página da Turma Iniciante. Adicionado link para o canal no YouTube para a Turma Iniciante.

--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -12,12 +12,10 @@
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
-
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <!-- <a class="navbar-brand" href="index.html"><img src="./img/logo.png" width="80" height="100"></a> -->
             <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser Integral</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
@@ -45,48 +43,52 @@
             </div>
         </div>
     </nav>
-    <div class="grid-container">
-        <div class="video1">
-            <iframe src="https://www.youtube.com/embed/72bV8E7Xx6o" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-12"><h2>Aulas de Matemática</h2><a href="https://www.youtube.com/channel/UCWhh6tIOyWI_qbVWsTJCqbA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube"><i class="fab fa-youtube"></i></a></div>
         </div>
-        <div class="video2">
-            <iframe src="https://www.youtube.com/embed/TJwa35agwhU" frameborder="0"
+        <div class="row text-center padding">
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/72bV8E7Xx6o" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
-        <div class="video3">
-            <iframe src="https://www.youtube.com/embed/fvkApQgth78" frameborder="0"
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/TJwa35agwhU" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
-        <div class="video4">
-            <iframe src="https://www.youtube.com/embed/hfwKSNdl2sA" frameborder="0"
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/fvkApQgth78" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
-        <div class="video5">
-            <iframe src="https://www.youtube.com/embed/2xj9kS6XUAg" frameborder="0"
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/hfwKSNdl2sA" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
-        <div class="video6">
-            <iframe src="https://www.youtube.com/embed/40hmeODZ6E8" frameborder="0"
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/2xj9kS6XUAg" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
-        <div class="video7">
-            <iframe src="https://www.youtube.com/embed/GiUg4ks_0vM" frameborder="0"
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/40hmeODZ6E8" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
-        <div class="video8">
-            <iframe src="https://www.youtube.com/embed/visRggyHP_I" frameborder="0"
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/GiUg4ks_0vM" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <iframe src="https://www.youtube.com/embed/visRggyHP_I" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 </body>
-
 </html>
